service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-portal-svc
spec:
  selector:
    app: patient-portal
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
